--- a/bio.html
+++ b/bio.html
@@ -50,7 +50,7 @@
       </nav>
 </header>
     <main class="container">
-                <h1 class="animate__animated animate__flip text-center m-5 frase1 ">
+                <h1 class="animate__animated animate__pulse text-center m-5 frase1 ">
                   Mi trayectoria
                 </h1>
             <section class="video mb-5 m-auto">
@@ -58,21 +58,50 @@
             </section>
     </main>
     <footer>
-        <div class="row">
-          <div class="wapp col-6">
-            <img src="https://www.svgrepo.com/show/106976/whatsapp.svg"  alt="">
-            <h3 class="m-3">
-              +54 2235825600
-            </h3>
+      <div class="father">
+
+        <!-- ↓ Columna 1 ↓ -->
+
+          <div class="contact">
+            <h1 class="titlef">
+              Contáctanos:
+            </h1>
+            <p class="subtitlef">
+              vivianabarran@gmail.com
+            </p>
+            <p class="subtitlef">
+              +54 223 5797714
+            </p>
           </div>
-          <div class="insta col-6">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/6/65/Black_Instagram_icon.svg"  alt="">
-            <h3 class="m-3">
-              Vivi.espacio
-            </h3>
+
+        <!-- ↓ Columna 2 ↓ -->
+
+          <div class="redes">
+            <h1 class="titlef">
+              Sígenos en nuestras redes sociales:
+            </h1>
+            <div class="rimg">
+              <img class="fimg" src="https://svgsilh.com/svg/667456.svg" alt="Whatsapp">
+              <img class="iimg" src="https://upload.wikimedia.org/wikipedia/commons/6/65/Black_Instagram_icon.svg" alt="Instagram">
+              <img class="timg" src="https://cdn-icons-png.flaticon.com/512/25/25347.png" alt="">
+            </div>
           </div>
-        </div>
-      </footer>
+
+        <!-- ↓ Columna 3 ↓ -->
+
+            <div class="mailing">
+              <h1 class="titlef">
+                  Mailing list:
+              </h1>
+              <form>
+                <div class="mb-3">
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                  <div id="emailHelp" class="form-text subtitlef">¡Regístrate si quieres recibir todas nuestras ofertas y novedades!</div>
+                </div>
+              </form>
+            </div>
+      </div>
+    </footer>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
